fixing alignment of easy social icons module

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1934,3 +1934,10 @@ div {
 	top: 0;
 	left: 0;
 }
+
+// Easy Social Icons
+
+.jssocialicons-horizontal{
+	.clearfix();
+	margin-left: 0;
+}
